--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> <!-- camera -->
     <uses-permission android:name="android.permission.CAMERA" />
 
+<!--    multimedia-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- (Optional) Permission to read from external storage -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -32,6 +39,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+        <activity
+            android:name=".MainActivity4"
+            android:exported="false" />
         <activity
             android:name=".DrawingView"
             android:exported="false" />
